<resources>
    <string name="app_name">Event_reminder</string>
    <string name="set">set</string>
    <string name="name">type your name:</string>
    <string name="age">type your age:</string>
    <string name="send">Send</string>
    <string name="color_as_event_sign">color as event sign</string>
    <string name="eventTitle">عنوان یادآوری</string>
    <string name="eventDay">روز يادآوری</string>
    <string name="eventTime">۱۰:۱۰</string>
    <string name="replaceFragment">replaceFragment</string>
    <string name="go_to_add_event">go to add event</string>
    <string name="home_toolbar_title">یادآوری</string>
    <string name="event_creator_toolbar_title">افزودن یادآوری</string>
    <string name="title">عنوان</string>
    <string name="description">توضیحات</string>
    <string name="location">مکان</string>
    <string name="link">لینک</string>
    <string name="occasion">مناسبت</string>
    <string name="store">ذخیره</string>
    <string name="cancel">انصراف</string>
    <string name="reminding">یادآوری</string>
    <string name="dateFormat">%d %s %d</string>
    <string name="timeFormatStringString">%s:%s</string>
    <string name="timeFormatStringInt">%s:%d</string>
    <string name="timeFormatIntString">%d:%s</string>
    <string name="timeFormatIntInt">%d:%d</string>
    <string name="DatePickerDialog">DatePickerDialog"</string>
    <string name="TimePickerDialog">TimePickerDialog</string>
    <string name="EditTextError">عنوان را وارد کنید</string>
    <string name="eventRegistered">یادآوری ثبت شد.</string>
    <string name="EventNotificationName">EventNotification</string>
    <string name="EventNotificationChannelId">EventNotificationChannelId</string>
    <string name="notifyAlarm">EventAlarmSettingNotification</string>
    <string name="TITLE">TITLE</string>
    <string name="TIME">TIME</string>
    <string name="birthday">تولد</string>
    <string name="instalment">قسط</string>
    <string name="anniversary">سالگرد</string>
    <string name="gym">باشگاه</string>
    <string name="meeting">جلسه</string>
    <string name="drug">دارو</string>
    <string name="back_to_previous_fragment">back to previous fragment</string>
    <string name="implementListener">must implement OnFragmentUpdateListener</string>
    <string name="OCCASION">OCCASION</string>
    <string name="startDate">تاریخ شروع</string>
    <string name="eventDetails">جزییات یادآوری</string>
    <string name="share">اشتراک گذاری</string>
    <string name="delete">حذف</string>
    <string name="edit">ویرایش</string>
    <string name="removeEventDialogQuestion">آیا از حذف یادآوری اطمینان دارید؟</string>
    <string name="confirm">تایید</string>
    <string name="shareEventExtraText">دریافت یادآوری %s یادآوری %s%s%s با شما به اشتراک گذاشته شده است، برای دیدن جزییات یادآوری و ذخیره آن، بر روی لینک زیر کلیک کنید.%s%s </string>
    <string name="Edited">Edited</string>
</resources>