<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.fereshte.event_reminder.util.view.customTextView.IranSansMediumTextView
        android:id="@+id/dialogTitleTxv"
        style="@style/dialog_text_header"
        android:text="@string/delete"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:stateListAnimator="@null"/>

    <com.fereshte.event_reminder.util.view.customTextView.IranSansRegularTextView
        android:id="@+id/questionTxv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/removeEventDialogQuestion"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/dark_gray"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@+id/dialogTitleTxv"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.fereshte.event_reminder.util.view.customradiobutton.IranSansRegularButton
        android:id="@+id/confirmDeleteBtn"
        style="@style/dialog_buttons"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/bg_rectangle_deepblue"
        android:text="@string/confirm"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionTxv" />

    <com.fereshte.event_reminder.util.view.customradiobutton.IranSansRegularButton
        android:id="@+id/cancelDeleteBtn"
        style="@style/dialog_buttons"
        android:layout_marginLeft="@dimen/_4sdp"
        android:background="@drawable/selector_cancel_btn"
        android:text="@string/cancel"
        android:textColor="@color/turquoise"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/confirmDeleteBtn"
        app:layout_constraintTop_toBottomOf="@+id/questionTxv" />

</androidx.constraintlayout.widget.ConstraintLayout>